@@ -11,12 +11,12 @@ clean:
 	for model in $(MODELS); do \
 	  if [ -d $$model ]; then \
 	    cd $$model && for name in *; do if [ -f $$name -a $$name != Makefile -a $$name != Makefile.in ]; then rm $$name; fi; done; \
-	  fi; \
+	  fi;\
 	done
 	for port in $(CLEANALLPORTS) ; do\
 	  if [ -f $$port/Makefile ]; then\
 	    $(MAKE) -C $$port clean ;\
-	  fi\
+	  fi;\
 	done
 
 
@@ -27,7 +27,7 @@ distclean: clean
 	for port in $(CLEANALLPORTS) ; do\
 	  if [ -f $$port/Makefile ]; then\
 	    $(MAKE) -C $$port distclean ;\
-	  fi\
+	  fi;\
 	done
 
 # Like clean but some files may still exist
